# VisuSysSol

./: .gitignore  CMakeLists.txt  README.md
SolarSys/: main.cpp
SolarSys/include/: coreEngine.hpp  events.hpp  matrices.hpp  pathStorage.hpp  planetData.hpp  planetObject.hpp  renderEngine.hpp  resources.hpp  shaderManager.hpp  solarSystem.hpp  textures.hpp  tools.hpp  window.hpp
SolarSys/shaders/: 3D.fs.glsl  3D.vs.glsl  triangle.fs.glsl  triangle.vs.glsl
SolarSys/src/: coreEngine.cpp  events.cpp  main.cpp  matrices.cpp  planetData.cpp  planetObject.cpp  renderEngine.cpp  resources.cpp  shaderManager.cpp  solarSystem.cpp  textures.cpp  window.cpp
doc/: note.md
glimac/glimac/: Program.hpp
